# llamaindex_pydantic_rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README.pt-br.md  docker-compose.yml  mcp-config.json  pyproject.toml
generator/: main.py  requirements.txt
infra/docs/: data-dictionary.csv  data-retention-policy.md  incident-response-runbook.md  sla-definitions.md
infra/scripts/: init-databases.sql  init-neo4j.cypher  init-seaweedfs.sh  seed-neo4j.sh
src/api/: __init__.py  app.py  config.py  main.py
src/api/routes/: __init__.py  health.py  ingest.py  query.py
src/engines/: __init__.py  _text.py  brain.py  config.py  ledger.py  memory.py  router.py
src/ingestion/: __init__.py  config.py  pipeline.py  readers.py  run.py
src/mcp/: __init__.py  run.py  server.py
src/schemas/: __init__.py  api.py  domain.py  query.py
tests/: conftest.py
tests/integration/: test_api.py  test_engines.py  test_router.py
tests/unit/: test_router_classification.py  test_schemas.py
