[project]
name = "dataops-knowledge-hub"
version = "0.1.0"
description = "Enterprise RAG system with LlamaIndex + Pydantic — Ledger, Memory & Brain architecture"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-readers-database>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-graph-stores-neo4j>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai>=0.3.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.8",
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "boto3>=1.35",
    "faker>=30.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
